# saver-glyphs

./: AGENT.md  Cargo.toml  README.md  build.rs  build_helpers.rs
.github/workflows/: ci.yml
assets/: idlescreen-glyphs.desktop  idlescreen-glyphs.xml  trance-glyphs.xml
src/: lib.rs  tests_perf.rs
src/glyphs/: draw.rs  glyphs_tests.rs  mod.rs  physics.rs  screensaver_impl.rs
