[package]
license = "Apache-2.0"
name = "glyphs"
version = "2.0.1"
edition = "2024"
description = "Matrix-style rain with live system information"
publish = false
autobins = false

[lib]
name = "screensaver_glyphs"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
idle-api = { path = "../idle/idle-api" }
libc = "0.2"

[build-dependencies]
embed-resource = "2"

[package.metadata.deb]
name = "idle-saver-glyphs"
provides = "trance-plugin-glyphs"
replaces = "trance-plugin-glyphs"
conflicts = "trance-plugin-glyphs (<< 2.0.0)"
maintainer = "idlescreen <jerydleuck@gmail.com>"
extended-description = "Matrix-style rain with live system information. Official IdleScreen (Trance) screensaver plugin."
depends = "libc6"
section = "utils"
priority = "optional"
assets = [
    ["target/release/libscreensaver_glyphs.so", "usr/libexec/idle/screensavers/libscreensaver_glyphs.so", "644"],
    ["assets/idlescreen-glyphs.png", "usr/share/pixmaps/idlescreen-glyphs.png", "644"]
]

[package.metadata.generate-rpm]
name = "idle-saver-glyphs"
release = "1"
arch = "x86_64"
summary = "Matrix-style rain with live system information"
description = "Matrix-style rain with live system information"
license = "Apache-2.0"
assets = [
    { source = "target/release/libscreensaver_glyphs.so", dest = "/usr/libexec/idle/screensavers/libscreensaver_glyphs.so", mode = "644", user = "root", group = "root" },
    { source = "assets/idlescreen-glyphs.png", dest = "/usr/share/pixmaps/idlescreen-glyphs.png", mode = "644", user = "root", group = "root" }
]

[package.metadata.generate-rpm.requires]
idle = "*"

[package.metadata.generate-rpm.provides]
trance-plugin-glyphs = "*"

[package.metadata.generate-rpm.obsoletes]
trance-plugin-glyphs = "*"
